--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,27 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:recommended"
-  ]
+    "config:recommended",
+    ":semanticCommitScopeDisabled",
+    ":semanticCommitTypeAll(chore)",
+    "helpers:pinGitHubActionDigests",
+    ":pinDevDependencies"
+  ],
+  "packageRules": [
+    {
+      "matchCategories": [
+        "golang"
+      ],
+      "semanticCommitType": "deps"
+    }
+  ],
+  "configMigration": true,
+  "baseBranches": [
+    "main"
+  ],
+  "assigneesFromCodeOwners": true,
+  "addLabels": [
+    "dependency"
+  ],
+  "automerge": false
 }
