--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         uses: reviewdog/action-golangci-lint@f9bba13753278f6a73b27a56a3ffb1bfda90ed71 # v2.8.0
         with:
           go_version: 1.25.0
-          golangci_lint_version: 2.4.0
+          golangci_lint_version: v2.4.0
           reporter: github-pr-review
           fail_on_error: true
 
